// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 1`] = `
<ol
  class="filterNavigatorBar profileFilterNavigator"
>
  <li
    class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
  >
    <button
      class="filterNavigatorBarItemContent"
      type="button"
    >
      <span
        class="filterNavigatorBarItemContent profileFilterNavigator--tab-selector button"
      >
        Full Range (⁨51ms⁩)
      </span>
    </button>
  </li>
</ol>
`;

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 2`] = `
<ol
  class="filterNavigatorBar profileFilterNavigator"
>
  <li
    class="filterNavigatorBarItem filterNavigatorBarRootItem"
  >
    <button
      class="filterNavigatorBarItemContent"
      type="button"
    >
      <span
        class="filterNavigatorBarItemContent profileFilterNavigator--tab-selector"
      >
        Full Range (⁨51ms⁩)
      </span>
    </button>
  </li>
  <li
    class="filterNavigatorBarItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
  >
    <span
      class="filterNavigatorBarItemContent"
    >
      40ms
    </span>
  </li>
</ol>
`;

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 3`] = `
<ol
  class="filterNavigatorBar profileFilterNavigator"
>
  <li
    class="filterNavigatorBarItem filterNavigatorBarRootItem"
  >
    <button
      class="filterNavigatorBarItemContent"
      type="button"
    >
      <span
        class="filterNavigatorBarItemContent profileFilterNavigator--tab-selector"
      >
        Full Range (⁨51ms⁩)
      </span>
    </button>
  </li>
  <li
    class="filterNavigatorBarItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
  >
    <button
      class="filterNavigatorBarItemContent"
      type="button"
    >
      40ms
    </button>
  </li>
  <li
    class="filterNavigatorBarItem filterNavigatorBarUncommittedItem filterNavigatorBarLeafItem"
    title="100μs"
  >
    <form>
      <input
        aria-label="Range duration"
        class="filterNavigatorBarItemUncommittedFieldInput photon-input"
        title="Edit the range duration"
        value="100μs"
      />
    </form>
  </li>
</ol>
`;
